[package]
name = "mandelbrot_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
iced_winit = { git = "https://github.com/iced-rs/iced.git" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", features = ["wgpu"] }
iced_wgpu = { git = "https://github.com/iced-rs/iced.git" }
bytemuck = { version = "1.4", features = ["derive"] }
env_logger = "0.11"
futures = { version ="0.3", features = ["executor"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_wgpu = { git = "https://github.com/iced-rs/iced.git", features = ["webgl"] }
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Element",
    "HtmlCanvasElement",
    "Window",
    "Document",
] }
getrandom = { version = "0.3" }
